@@ -31,6 +31,7 @@ import bibliothek.gui.dock.station.screen.BoundaryRestriction;
 import bibliothek.gui.dock.util.ConfiguredBackgroundPanel;
 import bibliothek.gui.dock.util.DirectWindowProvider;
 import bibliothek.gui.dock.util.DockUtilities;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.formdev.flatlaf.extras.FlatSVGIcon;
 import java.awt.AWTException;
 import java.awt.BorderLayout;
@@ -57,7 +58,6 @@ import java.awt.event.WindowEvent;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.io.StringReader;
 import java.lang.management.ManagementFactory;
 import java.net.MalformedURLException;
 import java.net.URI;
@@ -77,9 +77,6 @@ import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Consumer;
-import javax.json.Json;
-import javax.json.JsonObject;
-import javax.json.JsonReader;
 import javax.management.InstanceNotFoundException;
 import javax.management.JMException;
 import javax.management.MBeanServer;
@@ -530,17 +527,16 @@ public class WeasisWin {
             CLocation.external(
                 screenBound.x, screenBound.y, screenBound.width - 150, screenBound.height - 150));
         plugin.showDockable();
-        GuiExecutor.instance()
-            .execute(
-                () -> {
-                  if (dock.isVisible()) {
-                    CControl control = GuiUtils.getUICore().getDockingControl();
-                    CVetoFocusListener vetoFocus = GuiUtils.getUICore().getDockingVetoFocus();
-                    control.addVetoFocusListener(vetoFocus);
-                    dock.setExtendedMode(ExtendedMode.MAXIMIZED);
-                    control.removeVetoFocusListener(vetoFocus);
-                  }
-                });
+        GuiExecutor.execute(
+            () -> {
+              if (dock.isVisible()) {
+                CControl control = GuiUtils.getUICore().getDockingControl();
+                CVetoFocusListener vetoFocus = GuiUtils.getUICore().getDockingVetoFocus();
+                control.addVetoFocusListener(vetoFocus);
+                dock.setExtendedMode(ExtendedMode.MAXIMIZED);
+                control.removeVetoFocusListener(vetoFocus);
+              }
+            });
       } else {
         ConfiguredBackgroundPanel parent =
             WinUtil.getParentOfClass(oldWin, ConfiguredBackgroundPanel.class);
@@ -704,21 +700,20 @@ public class WeasisWin {
     final JMenuItem updateMenuItem = new JMenuItem(Messages.getString("check.for.updates"));
     updateMenuItem.addActionListener(
         e -> {
-          JsonObject object = getLastRelease();
-          if (object != null) {
+          Release release = getLastRelease();
+          if (release != null) {
             Version vOld = AppProperties.getVersion(AppProperties.WEASIS_VERSION);
-            Version vNew = AppProperties.getVersion(object.getString("version"));
+            Version vNew = AppProperties.getVersion(release.getVersion());
             if (vNew.compareTo(vOld) > 0) {
-              openBrowser(updateMenuItem, object.getString("url")); // NON-NLS
+              openBrowser(updateMenuItem, release.getUrl());
             } else {
-              GuiExecutor.instance()
-                  .execute(
-                      () ->
-                          JOptionPane.showMessageDialog(
-                              updateMenuItem,
-                              Messages.getString("current.release.latest"),
-                              Messages.getString("update"),
-                              JOptionPane.INFORMATION_MESSAGE));
+              GuiExecutor.execute(
+                  () ->
+                      JOptionPane.showMessageDialog(
+                          WinUtil.getValidComponent(updateMenuItem),
+                          Messages.getString("current.release.latest"),
+                          Messages.getString("update"),
+                          JOptionPane.INFORMATION_MESSAGE));
             }
           }
         });
@@ -781,7 +776,17 @@ public class WeasisWin {
     return menuBar;
   }
 
-  private JsonObject getLastRelease() {
+  private Release getRelease(String body) {
+    ObjectMapper mapper = new ObjectMapper();
+    try {
+      return mapper.readValue(body, Release.class);
+    } catch (IOException ex) {
+      LOGGER.error("Cannot read the json response", ex);
+    }
+    return null;
+  }
+
+  private Release getLastRelease() {
     try {
       HttpRequest request =
           HttpRequest.newBuilder()
@@ -795,10 +800,7 @@ public class WeasisWin {
               .followRedirects(HttpClient.Redirect.ALWAYS)
               .build()
               .send(request, BodyHandlers.ofString());
-
-      try (JsonReader jsonReader = Json.createReader(new StringReader(response.body()))) {
-        return jsonReader.readObject();
-      }
+      return getRelease(response.body());
     } catch (IOException | URISyntaxException ex) {
       LOGGER.error("Cannot check release update", ex);
     } catch (InterruptedException ex2) {
@@ -808,31 +810,30 @@ public class WeasisWin {
   }
 
   private void checkReleaseUpdate(Component parent) {
-    JsonObject object = getLastRelease();
-    if (object != null) {
+    Release release = getLastRelease();
+    if (release != null) {
       Version vOld = AppProperties.getVersion(AppProperties.WEASIS_VERSION);
-      Version vNew = AppProperties.getVersion(object.getString("version"));
+      Version vNew = AppProperties.getVersion(release.getVersion());
       if (vNew.compareTo(vOld) > 0) {
-        GuiExecutor.instance()
-            .execute(
-                () -> {
-                  JLabel label = new JLabel(Messages.getString("new.release.available"));
-                  label.setAlignmentX(JLabel.RIGHT_ALIGNMENT);
-                  JCheckBox dontAskMeAgain = new JCheckBox(Messages.getString("don.t.ask.again"));
-                  dontAskMeAgain.setAlignmentX(JLabel.RIGHT_ALIGNMENT);
-                  JPanel panel = GuiUtils.getVerticalBoxLayoutPanel(label, dontAskMeAgain);
-                  int confirm =
-                      JOptionPane.showConfirmDialog(
-                          parent, panel, Messages.getString("update"), JOptionPane.YES_NO_OPTION);
-                  if (confirm == 0) {
-                    openBrowser(parent, object.getString("url")); // NON-NLS
-                  }
-                  if (dontAskMeAgain.isSelected()) {
-                    GuiUtils.getUICore()
-                        .getSystemPreferences()
-                        .putBooleanProperty("weasis.show.update.next.release", false);
-                  }
-                });
+        GuiExecutor.execute(
+            () -> {
+              JLabel label = new JLabel(Messages.getString("new.release.available"));
+              label.setAlignmentX(JLabel.RIGHT_ALIGNMENT);
+              JCheckBox dontAskMeAgain = new JCheckBox(Messages.getString("don.t.ask.again"));
+              dontAskMeAgain.setAlignmentX(JLabel.RIGHT_ALIGNMENT);
+              JPanel panel = GuiUtils.getVerticalBoxLayoutPanel(label, dontAskMeAgain);
+              int confirm =
+                  JOptionPane.showConfirmDialog(
+                      parent, panel, Messages.getString("update"), JOptionPane.YES_NO_OPTION);
+              if (confirm == 0) {
+                openBrowser(parent, release.getUrl());
+              }
+              if (dontAskMeAgain.isSelected()) {
+                GuiUtils.getUICore()
+                    .getSystemPreferences()
+                    .putBooleanProperty("weasis.show.update.next.release", false);
+              }
+            });
       }
     }
   }
@@ -1156,7 +1157,7 @@ public class WeasisWin {
   private void importInExplorer(
       List<DataExplorerView> exps, final List<File> vals, DropLocation dropLocation) {
     if (exps.size() == 1) {
-      exps.get(0).importFiles(vals.toArray(new File[0]), true);
+      exps.getFirst().importFiles(vals.toArray(new File[0]), true);
     } else {
       Point p;
       if (dropLocation == null) {
@@ -1248,47 +1249,46 @@ public class WeasisWin {
     if (opt.isSet("quit")) { // NON-NLS
       System.exit(0);
     } else if (opt.isSet("visible")) { // NON-NLS
-      GuiExecutor.instance()
-          .execute(
-              () -> {
-                Frame app = getFrame();
-                app.setVisible(true);
-                int state = app.getExtendedState();
-                state &= ~Frame.ICONIFIED;
-                app.setExtendedState(state);
-                app.setVisible(true);
-                /*
-                 * Sets the window to be "always on top" instead using toFront() method that does not always bring the
-                 * window to the front. It depends on the platform, Windows XP or Ubuntu has the facility to prevent
-                 * windows from stealing focus; instead it flashes the taskbar icon.
-                 */
-                if (app.isAlwaysOnTopSupported()) {
-                  app.setAlwaysOnTop(true);
+      GuiExecutor.execute(
+          () -> {
+            Frame app = getFrame();
+            app.setVisible(true);
+            int state = app.getExtendedState();
+            state &= ~Frame.ICONIFIED;
+            app.setExtendedState(state);
+            app.setVisible(true);
+            /*
+             * Sets the window to be "always on top" instead using toFront() method that does not always bring the
+             * window to the front. It depends on the platform, Windows XP or Ubuntu has the facility to prevent
+             * windows from stealing focus; instead it flashes the taskbar icon.
+             */
+            if (app.isAlwaysOnTopSupported()) {
+              app.setAlwaysOnTop(true);
 
-                  try {
-                    Thread.sleep(500L);
-                    Robot robot = new Robot();
-                    Point old = MouseInfo.getPointerInfo().getLocation();
-                    Point p = app.getLocationOnScreen();
-                    int x = p.x + app.getWidth() / 2;
-                    int y = p.y + app.getHeight() / 2;
-                    robot.mouseMove(x, y);
-                    // Simulate a mouse click
-                    robot.mousePress(InputEvent.BUTTON1_MASK);
-                    robot.mouseRelease(InputEvent.BUTTON1_MASK);
-                    robot.mouseMove(old.x, old.y);
-                  } catch (AWTException e1) {
-                    // DO nothing
-                  } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                  } finally {
-                    app.setAlwaysOnTop(false);
-                  }
+              try {
+                Thread.sleep(500L);
+                Robot robot = new Robot();
+                Point old = MouseInfo.getPointerInfo().getLocation();
+                Point p = app.getLocationOnScreen();
+                int x = p.x + app.getWidth() / 2;
+                int y = p.y + app.getHeight() / 2;
+                robot.mouseMove(x, y);
+                // Simulate a mouse click
+                robot.mousePress(InputEvent.BUTTON1_MASK);
+                robot.mouseRelease(InputEvent.BUTTON1_MASK);
+                robot.mouseMove(old.x, old.y);
+              } catch (AWTException e1) {
+                // DO nothing
+              } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+              } finally {
+                app.setAlwaysOnTop(false);
+              }
 
-                } else {
-                  app.toFront();
-                }
-              });
+            } else {
+              app.toFront();
+            }
+          });
 
     } else {
       opt.usage();
