@@ -43,16 +43,14 @@ public class LabelsPrefView extends AbstractItemDialogPage {
   private final JPanel panelList = new JPanel();
   private final JComboBox<Graphic> comboBoxTool;
   private final JComboBox<FontItem> fontItemJComboBox;
-  private final ViewSetting viewSetting;
   private final Map<JCheckBox, Measurement> map;
 
   public LabelsPrefView() {
-    super(MeasureTool.LABEL_PREF_NAME, 510);
-    this.map = new HashMap<>(ImageStatistics.ALL_MEASUREMENTS.length);
-    this.viewSetting = Objects.requireNonNull(MeasureTool.viewSetting);
+    super(MeasureTool.LABEL_PREF_NAME, 710);
+    this.map = HashMap.newHashMap(ImageStatistics.ALL_MEASUREMENTS.length);
 
     ArrayList<Graphic> tools = new ArrayList<>(MeasureToolBar.getMeasureGraphicList());
-    tools.remove(0);
+    tools.removeFirst();
     this.comboBoxTool = new JComboBox<>(tools.toArray(Graphic[]::new));
     this.fontItemJComboBox = new JComboBox<>(FontItem.values());
 
@@ -117,6 +115,7 @@ public class LabelsPrefView extends AbstractItemDialogPage {
 
     getProperties().setProperty(PreferenceDialog.KEY_SHOW_APPLY, Boolean.TRUE.toString());
     getProperties().setProperty(PreferenceDialog.KEY_SHOW_RESTORE, Boolean.TRUE.toString());
+    getProperties().setProperty(PreferenceDialog.KEY_HELP, "draw-measure/#preferences"); // NON-NLS
   }
 
   private void selectTool(Graphic graph) {
@@ -142,22 +141,16 @@ public class LabelsPrefView extends AbstractItemDialogPage {
   }
 
   private void initialize() {
-    String key = viewSetting.getFontKey();
-    if (StringUtil.hasText(key)) {
-      fontItemJComboBox.setSelectedItem(FontItem.getFontItem(key));
-    } else {
-      fontItemJComboBox.setSelectedItem(FontItem.SMALL_SEMIBOLD);
-    }
+    FontItem item = MeasureTool.viewSetting.getFontItem();
+    fontItemJComboBox.setSelectedItem(item == null ? ViewSetting.DEFAULT_FONT : item);
 
     selectTool((Graphic) comboBoxTool.getSelectedItem());
   }
 
   @Override
   public void closeAdditionalWindow() {
-    viewSetting.setFontKey(
-        ((FontItem) Objects.requireNonNull(fontItemJComboBox.getSelectedItem())).getKey());
-    MeasureToolBar.getMeasureGraphicList()
-        .forEach(g -> MeasureToolBar.applyDefaultSetting(viewSetting, g));
+    ViewSetting settings = MeasureTool.viewSetting;
+    settings.setFontItem((FontItem) Objects.requireNonNull(fontItemJComboBox.getSelectedItem()));
 
     List<ViewerPlugin<?>> viewerPlugins = GuiUtils.getUICore().getViewerPlugins();
     synchronized (viewerPlugins) {
@@ -177,7 +170,7 @@ public class LabelsPrefView extends AbstractItemDialogPage {
 
   @Override
   public void resetToDefaultValues() {
-    viewSetting.setFontKey(FontItem.SMALL_SEMIBOLD.getKey());
+    MeasureTool.viewSetting.setFontItem(ViewSetting.DEFAULT_FONT);
     initialize();
     MeasureToolBar.getMeasureGraphicList()
         .forEach(
